--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,8 @@ section {
     background-position: center;
     position: relative;
 }
+/* Hero Style End */
+
 .hero-form {
     color: #024e76;
     background-color: #fce138;
@@ -99,4 +101,10 @@ section {
 .hero-form label {
     margin: 0 5px;
 }
-/* Hero Style End */
+.hero-form button{
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 14px;
+}
